--- a/app/templates/doctor/patient/assessment.html
+++ b/app/templates/doctor/patient/assessment.html
@@ -42,39 +42,39 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('doctor.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
+    <!-- before patient_id=patient[1] -->
+
     <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
-    <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient[1]) }}">
+    <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
 
     <ul class="nav nav-underline">
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient[1]) }}">PATIENT INFORMATION</a>
+            <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient[1]) }}">MEDICAL HISTORY</a>
+            <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" aria-current="page">MEDICAL ASSESSMENT</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient[1]) }}">LABORATORY RESULTS</a>
+            <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">LABORATORY REPORTS</a>
         </li>
     </ul>
 
@@ -154,7 +154,6 @@
     
             <!-- PHYSICAL EXAMINATIONS -->
             <div class="med-header J">PHYSICAL EXAMINATIONS</div>
-    
             <div class="p_row vitalRowC">
                 <p>HEAD</p>
                 <div class="inputBox vitalsC">
