--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -2,9 +2,10 @@
     --blueA: #0277BD; 
     --blueB: #A3D5FF;
     --blueC: #DFF1FF;
-    --blueD: #007bff; /* Active (button, text, background) */
-    --grayA: #6c757d;  /* Disabled Text */
-    --grayB: #e9ecef; /* Disabled Background */
+    --blueD: #007BFF; /* Active (button, text, background) */
+    --darkBlue: #2B394C;
+    --grayA: #6C757D;  /* Disabled Text */
+    --grayB: #E9ECEF; /* Disabled Background */
 }
 
 *,
@@ -43,6 +44,7 @@
 .cms-logo p {
     font-weight: 400;
     margin-left: 15px;
+    color: var(--darkBlue);
 }
 
 /* -------------------------------------------- SIDEBAR -------------------------------------------- */
@@ -50,59 +52,82 @@
     width: 80px;  
     height: 700px; 
     background-color: var(--blueC);
-    border-radius: 50px; 
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
     position: fixed;  
-    margin-top: 6px;
-    margin-left: 10px;
     padding: 8px;
     z-index: 1;
+    top: 0;
+    left: 0;
 }
 
-.logout:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
+/* logout */
+.logout:hover img {
+    transform: translateY(0%);
 }
 
+/* icon */
 .icon-bg {
     width: 100%;  
     height: 62px; 
-    background-color: var(--blueB); 
     border-radius: 30px; 
     padding: 4px;
     transition: width 0.3s;
 }
 
 .icon-bg:hover {
-    width: 249px;   
-    transition: width 0.3s, background-image 0.3s;
-    background-image: linear-gradient(to right, var(--blueB), white); 
-}
-
-.icon-bg:hover p {
-    display: flex;
-    margin-left: 35px;
     transition: 0.5s;
+    background-color: white;
+    border-radius: 100%;
 }
 
+/* selected icon */
 .selected-icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: white; 
-    border-radius: 30px; 
+    border-radius: 100%; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     padding: 4px;
 }
 
-.selected-icon-bg:hover {
-    background-color: white;
-    width: 249px;   
-    transition: 0.2s;
+/* icon text styles */
+.icon-bg p, .logout p, .selected-icon-bg p {
+    display: flex;
+    position: relative;
+    transition: all 0.3s ease-out; 
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-50%);
+    top: 18px;
+    left: 50px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--darkBlue);
+    color: white;
+    font-weight: 100;
 }
 
-.selected-icon-bg:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
+.icon-bg p::after, .logout p::after, .selected-icon-bg p::after {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    border-radius: 2px;
+    background-color: var(--darkBlue);
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+.icon-bg p::after, .logout p::after, .selected-icon-bg p::after {
+    left: -6px;
+    top: 5px;
+}
+
+.icon-bg:hover p, .logout:hover p, .selected-icon-bg:hover p {
+    left: 35px;
+    opacity: 1;
+    visibility: visible;
+    z-index: 99;
 }
 
 ul {
@@ -122,7 +147,7 @@ ul li {
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--darkBlue);
 }
 
 ul li img {
@@ -135,11 +160,29 @@ ul li p {
     white-space: nowrap;
     display: none;
 }
+/* 
+.border-line {
+    border: 1px solid var(--darkBlue);
+    position: absolute;
+    width: 65px;
+    margin-top: 180px;
+} */
 
 /* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
+.sidenav-user-bg {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    height: 60px; 
+    background-color: white;
+    border-radius: 360px; 
+    overflow: hidden;
+    margin-bottom: 25px;
+}
+
 .sidenav-user-bg:hover {
     display: flex;
-    width: 249px;
+    width: 200px;
 }
 
 .sidenav-user-bg div {
@@ -152,9 +195,9 @@ ul li p {
 }
 
 .user-img {
-    width: 55px;
+    width: 50px;
     border-radius: 100%;
-    margin-left: 5px;
+    margin-left: 7px;
 }
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
@@ -162,32 +205,33 @@ ul li p {
     font-weight: 900;
     position: absolute;
     display: flex;
-    top: 60px;
-    left: 1120px;
-}
-
-.date-time.medtech {
-    left: 1160px;
+    top: 70px;
+    left: 1140px;
 }
 
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
+.patient-header p {
+    position: absolute;
+    top: 45px;
+    left: 110px;
+    font-weight: 900;
+    font-size: 18px;
+}
+
+
 .patient-table {
     position: relative; 
-    width: 1330px; 
+    width: 1400px; 
     top: 85px; 
-    left: 150px;
+    left: 110px;
     line-height: 1.5;
-    color: black;
+    color: var(--darkBlue);
     background-color: white;
     font-size: 16px;
 }
 
 .patient-table.request {
     top: 190px; 
-}
-
-.patient-table.test {
-    top: 100px; 
 }
 
 .table {
@@ -202,7 +246,7 @@ ul li p {
 
 .table thead {
     background-color: var(--blueB);
-    color: black;
+    color: var(--darkBlue);
 }
 
 .table-striped tbody tr:nth-of-type(even) {
@@ -214,7 +258,7 @@ ul li p {
     color: white; 
     border: none;
     padding: 8px 16px;
-    border-radius: 4px; 
+    border-radius: 5px; 
     cursor: pointer; 
     font-size: 15px;
 }
@@ -284,7 +328,7 @@ ul li p {
 .dataTables_wrapper .dataTables_filter input {
     padding: 0.375rem 0.5rem;
     margin-bottom: 1rem; 
-    color: black; 
+    color: var(--darkBlue); 
     background-color: white; 
     border: 1px solid var(--blueB); 
     border-radius: 0.25rem; 
@@ -293,12 +337,12 @@ ul li p {
 }
 
 .dataTables_wrapper .dataTables_filter {
-    margin-left: 1065px;
+    margin-left: 1135px;
     margin-top: 0px;
 }
   
 .dataTables_wrapper .dataTables_filter input:focus {
-    color: black; 
+    color: var(--darkBlue); 
     background-color: white; 
     border-color:  var(--blueB); 
     outline: 0;
@@ -335,12 +379,12 @@ ul li p {
     box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1); 
 }
 
-/* BUTTONS */
+/* -------------------------------------------- BUTTONS -------------------------------------------- */
 .btn-container {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    margin-top: 35px;
+    margin-top: 50px;
 }
 
 .btn-submit {
@@ -349,7 +393,7 @@ ul li p {
     border: none;
     border-radius: 5px;
     width: 100px;
-    height: 35px;
+    height: 40px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -362,4 +406,153 @@ ul li p {
 .btn-submit:active {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
     transform: translateY(1px);
+}
+
+.btn-submit.remove {
+    background-color: #EE4B2B;
+    margin-top: 0px;
+    position: static;
+    height: 40px;
+    width: 120px;
+}
+
+.btn-submit.test {
+    background-color: var(--blueA);
+    position: absolute;
+    height: 40px;
+    width: 120px;
+}
+
+/* -------------------------------------------- ROW -------------------------------------------- */
+.p_row {
+    position: relative;
+    justify-content: center;
+    display: flex;
+}
+
+/* -------------------------------------------- INPUT BOXES -------------------------------------------- */
+.inputBox {
+    position: relative;
+}
+
+.inputBox input {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--blueB);
+    border-radius: 5px;
+    outline-color: var(--blueB);
+    color: var(--darkBlue);
+    font-size: 1em;
+}
+
+.inputBox span {
+    position: absolute;
+    top: -8px;
+    left: 15px;
+    padding: 0 10px;
+    background: white; 
+    font-size: 0.75em;
+    color: var(--blueA);
+    font-weight: 900;
+    font-size: 14px;
+}
+
+.inputBox input:focus {
+    color: var(--darkBlue); 
+    background-color: white; 
+    outline: 0;
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1) 
+} 
+
+/* -------------------------------------------- MODAL FOR SUCCESS AND ERROR MESSAGES -------------------------------------------- */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+  
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10% auto;
+}
+  
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background-color: #fff;
+    border-radius: 5px;
+    margin: 0 auto;
+    padding: 10px;
+}
+  
+.modal-header {
+    padding: 10px;
+    border-bottom: 1px solid var(--blueA);
+    color: var(--blueA);
+    font-size: 12px;
+}
+  
+.modal-body {
+    padding: 20px;
+    font-size: 16px;
+}
+  
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+  
+.modal-title {
+    margin: 0;
+}
+
+.modal.show {
+    display: block;
+}
+  
+/* modal confirmation button */
+.btn-done {
+    color: white;
+    background-color: var(--blueA);
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-done:active {
+    transform: translateY(1px);
+}
+
+.btn-done.cancel {
+    background-color: var(--grayB);
+    color: var(--grayA);
+}
+
+/* -------------------------------------------- FORM HEADER -------------------------------------------- */
+.med-header {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 1100px;  
+    height: 50px; 
+    background-color: var(--blueC);
+    color: var(--blueA);
+    font-weight: 900;
+    left: 65px;
 }
