--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -27,20 +27,20 @@
                 </li>
             </a>
         </ul>
+
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Xerxes.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Admin</p>
             </div>
         </div>
+        <!-- admin logout -->
         <ul>
-            <a href="{{ url_for('admin.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
