--- a/app/templates/doctor/patient/add_assessment.html
+++ b/app/templates/doctor/patient/add_assessment.html
@@ -42,19 +42,17 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('doctor.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
@@ -140,7 +138,6 @@
     
             <!-- PHYSICAL EXAMINATIONS -->
             <div class="med-header J">PHYSICAL EXAMINATIONS</div>
-    
             <div class="p_row vitalRowC">
                 <p>HEAD</p>
                 <div class="inputBox vitalsC">
@@ -218,7 +215,6 @@
                     <span>ABNORMALITIES <em>(specify)</em></span>
                 </div>
             </div>
-    
             <div class="p_row vitalRowE">
                 <p>THROAT</p>
                 <div class="inputBox vitalsC">
@@ -285,7 +281,6 @@
                     <span>ABNORMALITIES <em>(specify)</em></span>
                 </div>
             </div>
-    
             <div class="p_row vitalRowF">
                 <div class="inputBox complaints">
                     <textarea class="complaints" name="comments" rows="2" placeholder="Enter additional comments"></textarea>
@@ -315,7 +310,7 @@
                     <div class="modal-body">
                         Patient medical assessment added successfully!
                     </div>
-                    <a href="{{ url_for('doctor.consultation', patient_id=patient[1]) }}"> 
+                    <a href="{{ url_for('doctor.consultation', patient_id=patient[0]) }}"> 
                         <div class="modal-footer">
                             <button id="successSave" type="button" class="btn-done">DONE</button>
                         </div>
@@ -333,7 +328,7 @@
                     <div class="modal-body">
                         Error in adding patient medical information.
                     </div>
-                    <a href="{{ url_for('doctor.consultation', patient_id=patient[1]) }}">
+                    <a href="{{ url_for('doctor.consultation', patient_id=patient[0]) }}">
                         <div class="modal-footer">
                             <button id="errorDismiss" type="button" class="btn-done">OKAY</button>
                         </div>
@@ -342,6 +337,5 @@
             </div>
         </div>
     {% endif %}
-    
     
 {% endblock %}
