--- a/app/templates/doctor/patient/lab_results.html
+++ b/app/templates/doctor/patient/lab_results.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+    <meta http-equiv="refresh" content="10">
+
     <!-- SIDE NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
@@ -42,19 +44,17 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('doctor.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
@@ -62,20 +62,20 @@
     <a class="back-icon" href="{{ url_for('doctor.patient') }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
-
+    
     <ul class="nav nav-underline">
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient[0]) }}">PATIENT INFORMATION</a>
+            <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient[0]) }}">MEDICAL HISTORY</a>
+            <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link"  href="{{ url_for('doctor.consultation', patient_id=patient[0]) }}">MEDICAL ASSESSMENT</a>
+            <a class="nav-link"  href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page">LABORATORY RESULTS</a>
-            </li>
+            <a class="nav-link active" aria-current="page">LABORATORY REPORTS</a>
+        </li>
     </ul>
 
     <!-- LABORATORY RESULTS -->
@@ -85,20 +85,23 @@
             <table id="example" class="table table-striped" style="width:100%">
                 <thead>
                     <tr>
-                        <th>RESULTS</th>
+                        <th>SUBJECT</th>
                         <th>DATE</th>
                         <th>ACTION</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for labreport in labreports %}
                     <tr>
-                        <td>BLOOD SAMPLE</td>
-                        <td>2023-11-02</td>
+                        <td>{{ labreport[0] }}</td>
+                        <td>{{ labreport[1] }}</td>
                         <td>
                             <!-- RESULTS -->
                             <form method="GET" action="/doctor/results/">
                                 <div class="delete-icon">
-                                    <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                    <input id="order_id" name="order_id" value="{{ labreport[2] }}" hidden>
+                                    <input id="patient_id" name="patient_id" value="{{ labreport[3] }}" hidden>
+                                    <input id="report_id" name="report_id" value="{{ labreport[4] }}" hidden>
                                     <button type="submit" style="background: none; border: none;">
                                         <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
                                     </button>
@@ -106,12 +109,13 @@
                             </form> 
                         </td>
                     </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
 
-    <a href="{{ url_for('doctor.labtest_request', patient_id=patient[0]) }}">
+    <a href="{{ url_for('doctor.labtest_request', patient_id=patient_id) }}">
         <div class="add-icon">
             <img src="{{ url_for('static', filename='images/Request.png') }}">
         </div>
