--- a/app/templates/doctor/patient/medical_history.html
+++ b/app/templates/doctor/patient/medical_history.html
@@ -42,19 +42,17 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('doctor.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
@@ -65,16 +63,16 @@
 
     <ul class="nav nav-underline">
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient[1]) }}">PATIENT INFORMATION</a>
+            <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link active" aria-current="page">MEDICAL HISTORY</a>
+            <a class="nav-link active" aria-current="page">MEDICAL HISTORY</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.consultation', patient_id=patient[1]) }}">MEDICAL ASSESSMENT</a>
+            <a class="nav-link" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient[1]) }}">LABORATORY RESULTS</a>
+            <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">LABORATORY REPORTS</a>
         </li>
     </ul>
 
@@ -98,7 +96,6 @@
 
             <!-- IMMUNIZATION -->
             <div class="med-header A">IMMUNIZATION</div>
-
             <div class="p_row immunize">
                 <div class="checkbox">
                     <input type="checkbox" id="bcgCheckbox" name="bcgCheckbox" value="checked" {% if patient[2] == 1 %}checked{% endif %} disabled>
@@ -301,7 +298,6 @@
             
             <!-- SOCIAL HISTORY -->
             <div class="med-header D">SOCIAL HISTORY</div>
-
             <div class="p_row five">
                 <p>Alcohol</p> 
                 <div class="inputBox historyA">
@@ -399,7 +395,7 @@
                     <span>NO. OF SEXUAL PARTNERS</span>
                 </div>
                 <div class="inputBox historyC">
-                    <input type="text" red" name="contraception" value="{{ patient[59] }}" disabled>
+                    <input type="text" red name="contraception" value="{{ patient[59] }}" disabled>
                     <span>CONTRACEPTIONS</span>
                 </div>
             </div>
@@ -484,6 +480,7 @@
                     <textarea class="medications" rows="2" id="allergies" name="allergies" disabled>{{ patient[73] }}</textarea>
                 </div>
             </div>
+            
             <div class="btn-container">
                 <button class="btn-submit" type="submit" id="updateButton" style="display: none;">UPDATE</button>
             </div>
