--- a/app/templates/doctor/patient/patient.html
+++ b/app/templates/doctor/patient/patient.html
@@ -42,19 +42,17 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('doctor.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
@@ -64,7 +62,7 @@
     </div>
 
     <div class="patient-table">
-        <table id="example" class="table table-striped" style="width:100%">
+        <table id="patientTable" class="table table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>FIRST NAME</th>
@@ -97,17 +95,76 @@
                     </td>
                     <td>
                         <!-- DELETE RECORD -->
-                        <a href="#">
+                        <form id="deleteForm_{{ patient[0] }}" method="POST" action="/doctor/delete_patient/">
                             <div class="delete-icon">
-                                <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                                <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                <button type="button" onclick="confirmation('{{ patient[0] }}')" style="background: none; border: none;">
+                                    <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                                </button>
                             </div>
-                        </a>
+                        </form> 
                     </td>
-                </tr>
+                </tr>   
                 {% endfor %}
             </tbody>
         </table>
     </div>
+
+    <!-- Confirmation Modal -->
+    <div id="confirmationModal" class="modal" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Delete Record</h1>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to permanently delete the patient record?
+                </div>
+                <div class="modal-footer">
+                    <button id="confirmDelete" class="btn-done">CONFIRM</button>
+                    <button id="cancelDelete" class="btn-done cancel">CANCEL</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {% if success %}
+        <div id="successModal" class="modal" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">Success</h1>
+                    </div>
+                    <div class="modal-body">
+                        Patient's medical record has been deleted successfully!
+                    </div>
+                    <a href="{{ url_for('doctor.patient') }}"> 
+                        <div class="modal-footer">
+                            <button id="successSave" type="button" class="btn-done">DONE</button>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    {% elif error %}
+        <div id="errorModal" class="modal" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">Error</h1>
+                    </div>
+                    <div class="modal-body">
+                        Error in deleting patient record. Please try again.
+                    </div>
+                    <a href="{{ url_for('doctor.patient') }}">
+                        <div class="modal-footer">
+                            <button id="errorDismiss" type="button" class="btn-done">OKAY</button>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 
     <a href="{{ url_for('doctor.add_patient') }}">
         <div class="add-icon">
@@ -119,7 +176,24 @@
     <script src=" https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
     <script>
-        new DataTable('#example');
+        new DataTable('#patientTable');
+
+        // CONFIRMATION BEFORE DELETION
+        function confirmation(patientId){
+            const confirmationModal = document.getElementById("confirmationModal");
+            confirmationModal.style.display = "block";
+
+            const confirmDelete = document.getElementById("confirmDelete");
+            const cancelDelete = document.getElementById("cancelDelete");
+            
+            confirmDelete.addEventListener("click", function() {
+                document.getElementById("deleteForm_" + patientId).submit();
+            });
+    
+            cancelDelete.addEventListener("click", function() {
+                confirmationModal.style.display = "none";
+            });
+        }
     </script>
 
 {% endblock %}
