--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -1,40 +1,28 @@
 {% extends "base.html" %}
-{% block title %}DocCare | Laboratory Result{% endblock title %}
+{% block title %}DocCare | Patient{% endblock title %}
 {% block link %} 
+    <link rel="stylesheet" href="{{ url_for('static', filename='medtech_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
 {% endblock %}
 
 {% block content %}
 
-    <!-- SIDE NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
-            <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
+            <img src="{{ url_for('static', filename='images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <a href="{{ url_for('doctor.dashboard') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
-                    <p>Dashboard</p>
-                </li>
-            </a>
-            <a href="{{ url_for('doctor.calendar') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
-                    <p>Calendar</p>
-                </li>
-            </a>
-            <a href="{{ url_for('doctor.appointment') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
-                    <p>Appointment</p>
-                </li>
-            </a>
             <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
-                <p>Patient</p>
+                <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
+                <p>Dashboard</p>
             </li>
-            <a href="{{ url_for('doctor.profile') }}">
+            <a href="{{ url_for('medtech.patient') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
+                    <p>Patient</p>
+                </li>
+            </a>
+            <a href="{{ url_for('medtech.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
@@ -42,10 +30,10 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
-                <p>Family Medicine</p>
+                <p>Medtech</p>
             </div>
         </div>
         <ul>
@@ -56,27 +44,30 @@
         </ul>
     </div>
 
-    <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
-    <a class="back-icon" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">
+    <!-- NAVBAR AND TABS FOR MEDTECH -->
+    <a class="back-icon" href="{{ url_for('medtech.dashboard') }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
 
     <ul class="nav nav-underline">
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"  href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page">LABORATORY RESULTS</a>
+            <a class="nav-link active" aria-current="page">LABORATORY REPORT</a>
         </li>
     </ul>
 
-    <form action="{{ url_for('doctor.results') }}">
+    <form action="{{ url_for('medtech.laboratory_test') }}">
+        
+        <!-- ORDER ID -->
+        <div class="inputBox code" style="display: none;">
+            <input disabled name="order_id" value="{{ labreq[0] }}">
+            <input hidden name="order_id" value="{{ labreq[0] }}" >
+        </div>
+        
+        <!-- PATIENT ID -->
+        <div class="inputBox code" style="display: none;">
+            <input disabled name="patient_id" value="{{ labreq[1] }}">
+            <input hidden name="patient_id" value="{{ labreq[1] }}">
+        </div>
 
         <!-- LABORATORY TEST -->
         <div class="patient-bg test">
@@ -587,32 +578,259 @@
             <div class="med-header labReport" id="r_header">LABORATORY REPORT</div>
             <center>
                 <div class="lab-result">
-                    <table cellpadding="5" id="resultTable" class="table table-striped" width="1030px"> 
-                        <thead>
-                            <tr> 
-                                <th>PROCESS NAME</th> 
-                                <th>TEST RESULT</th> 
-                                <th>REFERENCE VALUE</th> 
-                                <th>DIAGNOSIS</th> 
-                            </tr> 
-                        </thead>
-                        <tbody>
-                            {% for report in reports %}
-                            <tr>
-                                <td>{{ report[2] }}</td> 
-                                <td>{{ report[3] }}</td> 
-                                <td>{{ report[4] }}</td> 
-                                <td>{{ report[5] }}</td> 
-                            </tr>
-                            {% endfor %}
-                        </tbody>
+                    <table cellspacing="5"> 
+                        <tr> 
+                            <td>
+                                <div class="inputBox fName">
+                                    <input type="text" id="processName" required="required" name="processName" disabled>
+                                    <span>PROCESS NAME</span>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="inputBox status">
+                                    <input type="text" id="testResult" required="required" name="testResult" disabled>
+                                    <span>TEST RESULT</span>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="inputBox refValue">
+                                    <input type="text" id="refValue" required="required" name="refValue" disabled>
+                                    <span>REFERENCE VALUE</span>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="inputBox fName">
+                                    <input type="text" id="diagnosis" required="required" name="diagnosis" disabled>
+                                    <span>DIAGNOSIS</span>
+                                </div>
+                            </td>
+                        </tr> 
+                        <tr> 
+                            <td colspan="4"> 
+                                <div class="btn-container">
+                                    <button class="btn-submit test" type="button" id="testButton" onclick="test()" style="display: none;">ADD TEST</button>
+                                </div>
+                                <div class="btn-container">
+                                    <button class="btn-submit" type="button" id="doneButton" style="display: none;" onclick="toSubmitReport()">DONE</button>
+                                </div>
+                            </td>
+                        </tr>	 
                     </table> 
+                
+                    <br><br>
+                    
+                    <table cellpadding="5" id="resultTable" class="table table-striped" width="1030px"> 
+                        <tr> 
+                            <th>PROCESS NAME</th> 
+                            <th>TEST RESULT</th> 
+                            <th>REFERENCE VALUE</th> 
+                            <th>DIAGNOSIS</th> 
+                        </tr> 
+                    </table> 
+                    <div class="btn-container">
+                        <button type="button" class="btn-submit" id="submitData" style="display: none;">SUBMIT</button>
+                    </div>
                 </div>
             </center>
 
+            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
         </div>
     </form>
-    
+  
+    <div id="successModal" class="modal show" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Success</h1>
+                </div>
+                <div class="modal-body">
+                    The laboratory report has been completed and successfully sent to the doctor!
+                </div>
+                <a href="{{ url_for('medtech.patient') }}">
+                    <div class="modal-footer">
+                        <button type="button" class="btn-done">DONE</button>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 
+    <div id="errorModal" class="modal show" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Error</h1>
+                </div>
+                <div class="modal-body">
+                    An error occured. Unable to create laboratory report. Please try again.
+                </div>
+                <a href="{{ url_for('medtech.patient') }}">
+                    <div class="modal-footer">
+                        <button type="button" class="btn-done">OKAY</button>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <script> 
+        var orderId = document.querySelector('input[name="order_id"][hidden]').value;
+        var patientId = document.querySelector('input[name="patient_id"][hidden]').value;
+
+        console.log('Order ID:', orderId);
+        console.log('Patient ID:', patientId);
+
+        // TEST REPORT
+		function test(){ 
+			var p_name, t_result, r_value, diagnosis; 
+
+			p_name = document.getElementById('processName').value.toUpperCase(); 
+			t_result = document.getElementById('testResult').value.toUpperCase(); 
+			r_value = document.getElementById('refValue').value.toUpperCase(); 
+			diagnosis = document.getElementById('diagnosis').value.toUpperCase(); 
+
+            if (p_name && t_result && r_value && diagnosis) {
+                var newTable = document.getElementById('resultTable'); 
+                var processNames = Array.from(newTable.querySelectorAll('td:first-child'));
+
+                var isAlreadyAdded = processNames.some(function(cell) {
+                    return cell.textContent.toUpperCase() === p_name;
+                });
+
+                if (!isAlreadyAdded) {
+                    var row = newTable.insertRow(-1); 
+                    var cell1 = row.insertCell(0); 
+                    var cell2 = row.insertCell(1); 
+                    var cell3 = row.insertCell(2); 
+                    var cell4 = row.insertCell(3); 
+
+                    cell1.innerHTML = p_name;
+                    cell2.innerHTML = t_result;
+                    cell3.innerHTML = r_value;
+                    cell4.innerHTML = diagnosis;
+
+                    // Clear input fields
+                    document.getElementById('processName').value = ''; 
+                    document.getElementById('testResult').value = ''; 
+                    document.getElementById('refValue').value = ''; 
+                    document.getElementById('diagnosis').value = ''; 
+                } else {
+                    alert("This process name already exists in the table.");
+                }
+            } else {
+                alert("Kindly ensure that all fields are filled in before adding the laboratory test report.");
+            }
+		}
+        
+        // GET THE TEST INPUTS
+        document.getElementById('submitData').addEventListener('click', function () {
+            var extractedValues = [];
+            var table = document.getElementById('resultTable');
+            for (var i = 1; i < table.rows.length; i++) {
+    
+                var cells = table.rows[i].cells;
+    
+                var rowValues = {
+                    processName: cells[0].innerText,
+                    testResult: cells[1].innerText,
+                    referenceValue: cells[2].innerText,
+                    diagnosisSummary: cells[3].innerText
+                };
+
+                extractedValues.push(rowValues);
+            }
+
+            var dataToFetch = {
+                data: extractedValues,
+                order_id: orderId,
+                patient_id: patientId
+            };
+       
+            fetch('/medtech/laboratory_test/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(dataToFetch)
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json(); 
+            })
+            .then(data => {
+                console.log('Success modal:', document.getElementById('successModal'));
+                console.log('Error modal:', document.getElementById('errorModal'));
+  
+                if (data.success) {
+                    document.getElementById('successModal').style.display = 'block';
+                } else if (data.error) {
+                    document.getElementById('errorModal').style.display = 'block'   ;
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        });
+
+        // EDIT BUTTON
+        function enableEdit() {
+            const inputFields = document.querySelectorAll('.lab-result input');
+
+            inputFields.forEach((input) => {
+                input.disabled = false;
+            });
+
+            const testButton = document.querySelector('#testButton');
+            testButton.style.display = 'block';
+
+            const doneButton = document.querySelector('#doneButton');
+            doneButton.style.display = 'block';
+
+            const editIcon = document.getElementById('editIcon');
+            editIcon.src = "{{ url_for('static', filename='images/Cancel-icon.png') }}";
+            editIcon.setAttribute('onclick', 'disableEdit()'); 
+        }
+
+        function disableEdit() {
+            const inputFields = document.querySelectorAll('.lab-result input');
+
+            inputFields.forEach((input) => {
+                input.disabled = true;
+            });
+
+            const testButton = document.querySelector('#testButton');
+            testButton.style.display = 'none';
+
+            const doneButton = document.querySelector('#doneButton');
+            doneButton.style.display = 'none';
+
+            const editIcon = document.getElementById('editIcon');
+            editIcon.src = "{{ url_for('static', filename='images/Edit-icon.png') }}";
+            editIcon.setAttribute('onclick', 'enableEdit()');
+        }
+
+        function toSubmitReport() {
+            const inputFields = document.querySelectorAll('.lab-result input');
+
+            inputFields.forEach((input) => {
+                input.disabled = true;
+            });
+
+            const testButton = document.querySelector('#testButton');
+            testButton.style.display = 'none';
+
+            const doneButton = document.querySelector('#doneButton');
+            doneButton.style.display = 'none';
+
+            const submitButton = document.querySelector('#submitData');
+            submitButton.style.display = 'block';
+
+            const editIcon = document.getElementById('editIcon');
+            editIcon.src = "{{ url_for('static', filename='images/Edit-icon.png') }}";
+            editIcon.setAttribute('onclick', 'enableEdit()');
+        }
+	</script> 
 
 {% endblock %}
