--- a/app/templates/medtech/profile.html
+++ b/app/templates/medtech/profile.html
@@ -25,19 +25,17 @@
             </li>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Medtech</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('medtech.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 {% endblock %}
